--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /baitaplab3.2/nbproject/private/
 /baitaplab4/nbproject/private/
 /baitaplab4/build/
+/baitaplab5/nbproject/private/
+/baitaplab5/build/
